<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/main_menu1"
        app:showAsAction="never"
        android:orderInCategory="100"
        android:title="@string/main_menu_text1"/>
    <item android:id="@+id/main_menu2"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/main_menu_text2"/>
    <item android:id="@+id/main_menu3"
        app:showAsAction="never"
        android:orderInCategory="100"
        android:title="@string/main_menu_text3"/>
    <item android:id="@+id/main_menu4"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/main_menu_text4"/>
    <item android:id="@+id/main_menu5"
        app:showAsAction="never"
        android:orderInCategory="100"
        android:title="@string/main_menu_text5"/>
    <item android:id="@+id/main_menu6"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/main_menu_text6"/>
</menu>